--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 	<legend class="scheduler-border">Frequency</legend>	
 	<form id="form" class="form" method="POST">
 		  	<label for="wk">Texts:
-		  	<textarea type="text"  class="text" name="text" id="character" cols="73"></textarea>
+		  	<textarea type="text"  class="text" name="text" id="character" cols="73" palceholder="Enter long texts"></textarea>
 		  	</label>
 
 	<input type="submit" class="submit" onclick="sendRequest()" id="submit" value="Letter Count" />
